--- a/.github/workflows/mre.yml
+++ b/.github/workflows/mre.yml
@@ -7,4 +7,6 @@ jobs:
   reproduce:
     runs-on: ubuntu-24.04
     steps:
-      - run: sudo apt install -y npm
+      - run: sudo apt-get update
+      - run: sudo apt-get dist-upgrade
+      - run: sudo apt-get install -y npm
